# gene-extract

./: .gitignore  CITATION.cff  Cargo.toml  README.md
.github/workflows/: rust-clippy.yml  rust.yml
filtered/: dmel_real.fasta  dpse_real.fasta  dsim_real.fasta  dvir_real.fasta  dwil_real.fasta  my_filtered.fasta
src/: main.rs  rna_folding.py
